added routes to the server.js and added saved.handlebars

--- a/public/views/index.handlebars
+++ b/public/views/index.handlebars
@@ -1,14 +1,5 @@
-<h1>    </h1>
 
-<table>
-    <tr>
-        <th>
 
-        </th>
-    </tr>
-    <tr>
-        <td>
-            
-        </td>
-    </tr>
-</table>
+<div class="info-dump">
+    You have no new articles
+</div>
