--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="" type="text/css" />
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src=""></script>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 		<title>Quotes App</title>
 	</head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -18,10 +18,10 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Saved Articles</a>
+        <a class="nav-link" href="/saved">Saved Articles</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Scrape Articles!</a>
+        <a class="nav-link scrapeBtn" href="/scrape">Scrape Articles!</a>
       </li>
     </ul>
   </div>
@@ -29,6 +29,6 @@
 	<body>
 		{{{ body }}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <script src="./resources/js/app.js"></script>
 	</body>
 </html>
