--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,6 @@
 
 
 <div class="info-dump" id="articles">
-    <p>You have no new articles</p>
+    You have no new articles
 </div>
+<div id="notes"></div>
